force-app/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <description>Represents a work order generated from a customer call to perform plumbing work.</description>
    <label>Work_Order</label>
    <nameField>
        <label>Work_Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work_Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>