force-app/main/default/objects/Work_Order__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Complete address where the service will be made.</description>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>