force-app/main/default/objects/Work_Order__c/fields/Assigned_Tech__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Tech</label>
    <referenceTo>Tech_Profile__c</referenceTo>
    <relationshipLabel>Work_Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>