force-app/main/default/objects/Work_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client that required the service. If is public, can be generated automatically</description>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work_Orders</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>