force-app/main/default/objects/Work_Order__c/fields/Final_Cost__c.field-meta.xml
<CustomField>
    <fullName>Final_Cost__c</fullName>
    <label>Final Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>