force-app/main/default/objects/Work_Order__c/fields/Preferred_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time__c</fullName>
    <label>Preferred Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>