force-app/main/default/objects/Work_Order__c/fields/Work_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Territory_Name__c</fullName>
    <label>Work Territory Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>