force-app/main/default/objects/Work_Order__c/listViews/Plumbers_Queue_Work_Order.listView-meta.xml
<ListView>
    <fullName>Plumbers_Queue_Work_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Plumbers Queue</label>
    <queue>Plumbers_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>